--- a/admin/view/html/catalog/citation_form.html
+++ b/admin/view/html/catalog/citation_form.html
@@ -83,7 +83,7 @@
                                            placeholder="<?php echo $entry_content; ?>" class="form-control"
                                            id="input-content" />
                                     <?php if($content_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $content_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -98,7 +98,7 @@
                                            placeholder="<?php echo $entry_value; ?>" class="form-control"
                                            id="input-value" />
                                     <?php if($value_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $value_err; ?></span>
                                     <?php endif; ?>
                                 </div>
