--- a/admin/view/html/catalog/club_form.html
+++ b/admin/view/html/catalog/club_form.html
@@ -101,7 +101,7 @@
                                            placeholder="<?php echo $entry_name; ?>" class="form-control"
                                            id="input-name" />
                                     <?php if($name_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $name_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -116,7 +116,7 @@
                                            placeholder="<?php echo $entry_secretary; ?>" class="form-control"
                                            id="input-secretory" />
                                     <?php if($secretary_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $secretary_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -131,7 +131,7 @@
                                            placeholder="<?php echo $entry_governor; ?>" class="form-control"
                                            id="input-governor" />
                                     <?php if($governor_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $governor_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -146,7 +146,7 @@
                                            placeholder="<?php echo $entry_president; ?>" class="form-control"
                                            id="input-president" />
                                     <?php if($president_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $president_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -161,7 +161,7 @@
                                            placeholder="<?php echo $entry_mobile; ?>" class="form-control"
                                            id="input-mobile" />
                                     <?php if($mobile_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $mobile_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -176,7 +176,7 @@
                                            placeholder="<?php echo $entry_email; ?>" class="form-control"
                                            id="input-email" />
                                     <?php if($email_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $email_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -191,7 +191,7 @@
                                            placeholder="<?php echo $entry_password; ?>" class="form-control"
                                            id="input-password" />
                                     <?php if($password_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $password_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -206,7 +206,7 @@
                                            placeholder="<?php echo $entry_website; ?>" class="form-control"
                                            id="input-website" />
                                     <?php if($website_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $website_err; ?></span>
                                     <?php endif; ?>
                                 </div>
