--- a/admin/view/html/catalog/governor_form.html
+++ b/admin/view/html/catalog/governor_form.html
@@ -123,7 +123,7 @@
                                            placeholder="<?php echo $entry_rotarian; ?>" class="form-control"
                                            id="input-rotarian" />
                                     <?php if($rotarian_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $rotarian_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -138,7 +138,7 @@
                                            placeholder="<?php echo $entry_classification; ?>" class="form-control"
                                            id="input-classification" />
                                     <?php if($classification_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $classification_err; ?></span>
                                     <?php endif; ?>
                                 </div>
