--- a/admin/view/html/catalog/team_form.html
+++ b/admin/view/html/catalog/team_form.html
@@ -83,7 +83,7 @@
                                            placeholder="<?php echo $entry_name; ?>" class="form-control"
                                            id="input-name" />
                                     <?php if($name_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $name_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -119,7 +119,7 @@
                                            placeholder="<?php echo $entry_position; ?>" class="form-control"
                                            id="input-position" />
                                     <?php if($position_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $position_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -135,7 +135,7 @@
                                            placeholder="<?php echo $entry_mobile; ?>" class="form-control"
                                            id="input-mobile" />
                                     <?php if($mobile_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $mobile_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -150,7 +150,7 @@
                                            placeholder="<?php echo $entry_email; ?>" class="form-control"
                                            id="input-email" />
                                     <?php if($email_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $email_err; ?></span>
                                     <?php endif; ?>
                                 </div>
