--- a/admin/view/html/catalog/information_form.html
+++ b/admin/view/html/catalog/information_form.html
@@ -140,7 +140,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="form-group row required">
+                                            <div class="form-group row">
                                                 <label for="input-description<?php echo $language['language_id']; ?>"
                                                        class="col-sm-2 col-form-label"><?php echo $entry_description; ?></label>
 
