--- a/admin/view/html/catalog/information_group_form.html
+++ b/admin/view/html/catalog/information_group_form.html
@@ -84,7 +84,7 @@
                                            placeholder="<?php echo $entry_group_name; ?>" class="form-control"
                                            id="input-group-name" />
                                     <?php if($group_name_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $group_name_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                             
-                            <div class="form-group row required">
+                            <div class="form-group row">
                                 <label for="input-keyword" class="col-sm-2 col-form-label">
                                     <?php echo $entry_keyword; ?></label>
 
