update in validation

--- a/admin/view/html/user/user_group_form.html
+++ b/admin/view/html/user/user_group_form.html
@@ -82,7 +82,7 @@
                                     <input type="text" name="name" value="<?php echo $name; ?>"
                                         placeholder="<?php echo $entry_name; ?>" class="form-control" id="input-name">
                                     <?php if($name_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $name_err; ?></span>
                                     <?php endif; ?>
                                 </div>
