--- a/admin/view/html/user/user_form.html
+++ b/admin/view/html/user/user_form.html
@@ -83,7 +83,7 @@
                                         placeholder="<?php echo $entry_email; ?>" class="form-control"
                                         id="input-email" />
                                     <?php if($email_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $email_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -116,7 +116,7 @@
                                     <input type="text" name="name" value="<?php echo $name; ?>"
                                         placeholder="<?php echo $entry_name; ?>" class="form-control" id="input-name" />
                                     <?php if($name_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $name_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -153,7 +153,7 @@
                                         placeholder="<?php echo $entry_password; ?>" class="form-control"
                                         id="input-password" />
                                     <?php if($password_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $password_err; ?></span>
                                     <?php endif; ?>
                                 </div>
@@ -167,7 +167,7 @@
                                         placeholder="<?php echo $entry_confirm; ?>" class="form-control"
                                         id="input-confirm" />
                                     <?php if($confirm_err) : ?>
-                                    <span class="help-block">
+                                    <span class="invalid-tooltip">
                                         <?php echo $confirm_err; ?></span>
                                     <?php endif; ?>
                                 </div>
