Template file create and update

--- a/template/view/html/club/project.html
+++ b/template/view/html/club/project.html
@@ -92,11 +92,12 @@
                                                         <th>Sr</th>
                                                         <th>Month</th>
                                                         <th>Project Title</th>
-                                                        <th>Projects Cost</th>
+                                                        <th>Projects Cost(Doller)</th>
+                                                        <th>Number of beneficiaries</th>
                                                         <th>Action</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody>
+                                                <!-- <tbody>
                                                     <?php $n=1; ?>
                                                     <?php foreach($projects as $project): ?>
                                                     <tr>
@@ -111,7 +112,7 @@
                                                                     class="fa fa-eye"></i></a></td>
                                                     </tr>
                                                     <?php endforeach; ?>
-                                                </tbody>
+                                                </tbody> -->
                                             </table>
                                         </div>
                                     </div>
